# cpp-cmake-mccpp

./: README.md
ch1/: CMakeLists.txt  script.cmake
ch2/: sample.cmake
ch3/: CMakeLists.txt  compile_commands.json  hello.cpp  print-project-vars.cmake
ch3/sub/: CMakeLists.txt  sub.cpp  sub.h
